# Functional-Programming-2023

./: README.md
Lab1/: FacultyNewspaper.db  Lab1.cabal
Lab2/: Lab2.cabal
Lab2/monad-par-0.3.5/: monad-par.cabal
Lab2/monad-par-0.3.5/tests/: Makefile
Problems/Problem1/: Problem1.cabal
Problems/Problem2/: Problem2.cabal
Problems/Problem3/: Problem3.cabal
Problems/Problem4/: Problem4.cabal
Problems/Problem5/: Problem5.cabal
Problems/Problem6/: Problem6.cabal
Problems/Problem7/: Problem7.cabal
Problems/Problem8/: Problem8.cabal
